fixed image of airbus and centralizing of sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -56,52 +56,50 @@
 
 	   <div id="Underline h2" style='margin-top: -55px;' class="container-fluid bg-white">
         <div class="row">
-           <div class='col-sm-12'>
-		
+           <div class='col-sm-2'></div>
+           <div class='col-sm-8'>
+					
 	
-<h2>Thanks! </h2>	
-		<p>
-		We would like to thank all our sponsors & partners for making this project possible. In particular we would like to thank IDT for their generous support. Furthermore, we would like to thank Airbus Space and Defence Netherlands for their generous contribution to the Random Positioning Machine (RPM). 
-		</p>
-	 </div>
-	</div>
-	</div>
-		<div id="Underline h2" style='margin-top: -55px;' class="container-fluid bg-grey">
-        <div class="row">
-           <div class='col-sm-12'>
-        <div class="row">
-          <div class='col-sm-4' style='padding: 50px;'>
-		  <a target="_blank" href="http://eu.idtdna.com/site"><img src="images/sponsor/image16.png" width="350px" align="middle"></a>
+					<h2>Thanks! </h2>	
+							<p>
+							We would like to thank all our sponsors & partners for making this project possible. In particular we would like to thank IDT for their generous support. Furthermore, we would like to thank Airbus Space and Defence Netherlands for their generous contribution to the Random Positioning Machine (RPM). 
+							</p>
+							<div id="Underline h2" style='margin-top: -55px;' class="container-fluid bg-grey">
+									<div class="row">
+										 <div class='col-sm-12'>
+									<div class="row">
+										<div class='col-sm-4' style='padding: 50px;'>
+								<a target="_blank" href="http://eu.idtdna.com/site"><img src="images/sponsor/image16.png" width="350px" align="middle"></a>
+								</div>
+								<div class= 'col-sm-2'> </div>
+								<div class='col-sm-6' style='padding: 100px:'>
+								<h2> Integrated DNA technologies </h2>
+								Integrated DNA technologies is a main supllier of oligonucleotiden for the research and life sciences market. Oligonucleotides are short strands of DNA that can be synthesized. This synthesized DNA is comparable to oligonucleotides existing in nature and can have various apllications in synthetic biology e.g. PCR.
+							</div>
+							</div>
+							<div class="row">
+								<div class='col-sm-4' style='padding: 50px;'>
+								 <a target="_blank" href="http://www.airbusdefenceandspacenetherlands.nl"><img src='images/sponsor/Image02.png' width="350px" align="middle"></a>
+								 </div>
+								 <div class= 'col-sm-2'> </div>
+								 <div class='col-sm-6' style='padding: 100px:'>
+								<h2> Airbus Defence and Space Netherlands </h2>
+								Airbus Defence and Space Netherlands delivers various products, including satellite instruments and launch rocket structures. Their products also include a random positioning machine (RPM). The RPM is capable of simulating micro-gravity, making it possible to simulate gravity on different planets. Thereby this machine can be used in different scientific disciplinces, including biology. 
+							</div>
+							</div>
+							<div class="row">
+								<div class='col-sm-4' style='padding: 50px;'>
+								 <a target="_blank" href="http://www.leidenuniv.nl"><img  src='images/sponsor/image06.png' width="350px" align= "middle"></a>
+								</div>
+								<div class= 'col-sm-2'> </div>
+								<div class='col-sm-6' style='padding: 100px:'>
+								<h2> Leiden University </h2>
+								The university of Leiden is an international orientated university with a broad range of study programmes, ranging from biology to Japanese literature. Furthermore, Leiden University is the oldest university in the Netherlands with notable alumni, including the current king of the Netherlands.  
+							</div>
+							</div>
+					</div>
+					</div>
 			</div>
-			<div class= 'col-sm-2'> </div>
-			<div class='col-sm-6' style='padding: 100px:'>
-			<h2> Integrated DNA technologies </h2>
-			Integrated DNA technologies is a main supllier of oligonucleotiden for the research and life sciences market. Oligonucleotides are short strands of DNA that can be synthesized. This synthesized DNA is comparable to oligonucleotides existing in nature and can have various apllications in synthetic biology e.g. PCR.
-		</div>
-		</div>
-		<div class="row">
-			<div class='col-sm-4' style='padding: 50px;'>
-			 <a target="_blank" href="http://www.airbusdefenceandspacenetherlands.nl"><img src='images/sponsor/image02.png' width="350px" align="middle"></a>
-			 </div>
-			 <div class= 'col-sm-2'> </div>
-			 <div class='col-sm-6' style='padding: 100px:'>
-			<h2> Airbus Defence and Space Netherlands </h2>
-			Airbus Defence and Space Netherlands delivers various products, including satellite instruments and launch rocket structures. Their products also include a random positioning machine (RPM). The RPM is capable of simulating micro-gravity, making it possible to simulate gravity on different planets. Thereby this machine can be used in different scientific disciplinces, including biology. 
-		</div>
-		</div>
-		<div class="row">
-			<div class='col-sm-4' style='padding: 50px;'>
-			 <a target="_blank" href="http://www.leidenuniv.nl"><img  src='images/sponsor/image06.png' width="350px" align= "middle"></a>
-		  </div>
-		  <div class= 'col-sm-2'> </div>
-		  <div class='col-sm-6' style='padding: 100px:'>
-			<h2> Leiden University </h2>
-			The university of Leiden is an international orientated university with a broad range of study programmes, ranging from biology to Japanese literature. Furthermore, Leiden University is the oldest university in the Netherlands with notable alumni, including the current king of the Netherlands.  
-		</div>
-		</div>
-</div>
-</div>
-</div>
 	
 	<div id="Underline h2" style='margin-top: -55px;' class="container-fluid bg-white">
         <div class="row">
@@ -126,7 +124,7 @@
 					  <img src='images/sponsor/image08.png' width="200px">
 					</a></td>	
 					<td style='padding: 50px;'><a target="_blank" href="http://chdr.nl">
-					  <img src='images/sponsor/image10.png'width="200px">
+					  <img src='images/sponsor/image10.png' width="200px">
 					</a></td>
 					<td style='padding: 50px;'><a target="_blank" href="http://www.dsm.com/corporate/home.html">
 					  <img src='images/sponsor/image12.png' width="200px">
@@ -149,6 +147,10 @@
 </div>
 </div>
  </div>
+ <div class="cols-sm-2"></div>
+ </div>
+ </div>
+ 
 	<!-- <div class="container-fluid text-center bg-grey">
         <div class="row">
           <div class='col-sm-12'>
@@ -159,7 +161,7 @@
         </div>
 
 
-       <!-- <div class="row" style='position: relative; left: -22px;'>
+       <div class="row" style='position: relative; left: -22px;'>
           <div class="col-sm-4">
             <ul style="list-style-type: none;">
               <!-- <li> About </li>
@@ -182,5 +184,6 @@
 		<script>
 			w3IncludeHTML();
 		</script>
+	</div>
   </body>
 </html>
