centralized the team page

--- a/team.html
+++ b/team.html
@@ -55,11 +55,23 @@
       </div>
 
 	   <div id="Team members" style='margin-top: -55px;' class="container-fluid bg-grey">
-	   <h2> Students </h2>
         <div class="row">
-           <div class='col-sm-12'>
+        	<div class='col-sm-2'></div>
+        	<div class='col-sm-8'>
+
+          </div>
+          <div class='col-sm-2'></div>
+        </div>
+     </div>
+     
+  
+	<div id="abstract" style='margin-top: -120px;' class="container-fluid bg-white">
+      <div class="row">
+        <!--  <div class='col-sm-12' id='rpm-demo' style='height: 400px;'> -->
+        <div class='col-sm-2'></div>
+        <div class='col-sm-8' style='text-align: justify;'>
+			<h2> Students </h2>
 	
-	<center>
 	<table>
 		<tr>
 			<td style='padding: 50px;'>
@@ -143,7 +155,7 @@
 				<div>
 				<h2> Guus de Wit </h2>
 				<b> Role: </b> Treasurer <br>
-				<b> Field of study: </b> MSc student Mathematics </b>
+				<b> Field of study: </b> MSc student Mathematics <br>
 				<!--<b> Quote: </b> -->
 				</div>
 			</td>
@@ -177,7 +189,7 @@
 				</div>
 			</td>
 		<tr>
-		</tr>
+		<tr>
 			<td style='padding: 50px;'>
 			<img src="images/Team/image13.jpg" width="300px" >
 				<div>
@@ -189,10 +201,7 @@
 			</td>
 		</tr>
 	</table>
-	</center>
-</div>
-</div>
-</div>
+
 	
 	<!-- Hier een team foto van de advisors net als de header van het team <div id='header-background'>
 
@@ -202,30 +211,33 @@
       </div> -->
 
 	  
-  <div id="Advisors" style='margin-top: -55px;' class="container-fluid bg-white">
-	<h2> Advisors </h2>
-        <div class="row">
-          <div class='col-sm-4' style='padding: 50px;'>
-		   	<img src="images/Team/image16.jpg" width="200px">
-			<h2> Dennis Claessen </h2>
-			<b> Position: </b> Principal Investigator
+
+			<h2> Advisors </h2>
+      <div class="row">
+        <div class='col-sm-4' style='padding: 50px;"'>
+			 		<img src="images/Team/image16.jpg" width="200px">
+					<h2> Dennis Claessen </h2>
+					<b> Position: </b> Principal Investigator
+				</div>
+				<div class='col-sm-4' style='padding: 50px;'>
+				 <img src="images/Team/image15.jpg" width="200px"> 
+				 <h2> Anne v.d. Meij </h2>
+				 <b> Position: </b> Phd candidate
+				</div>
+				<div class='col-sm-4' style='padding: 50px;'>
+				 <img src="images/Team/image14.jpg" width="200px"> 
+				 <h2> Lizah v.d. Aart </h2>
+				 <b> Position: </b> Phd candidate
+				</div>
 			</div>
-			<div class='col-sm-4' style='padding: 50px;'>
-			 <img src="images/Team/image15.jpg" width="200px"> 
-			 <h2> Anne v.d. Meij </h2>
-			 <b> Position: </b> Phd candidate
-			 </div>
-			<div class='col-sm-4' style='padding: 50px;'>
-			 <img src="images/Team/image14.jpg" width="200px"> 
-			 <h2> Lizah v.d. Aart </h2>
-			 <b> Position: </b> Phd candidate
-		  </div>
 		</div>
 	</div>
-	
+
+	</div>
 	 <div w3-include-html="footer.html"></div>
 		<script>
 			w3IncludeHTML();
 		</script>
+	</div>
   </body>
 </html>
