fix: logo airbus background

--- a/sponsors.html
+++ b/sponsors.html
@@ -79,7 +79,7 @@
 							</div>
 							<div class="row">
 								<div class='col-sm-4' style='padding: 50px;'>
-								 <a target="_blank" href="http://www.airbusdefenceandspacenetherlands.nl"><img src='images/sponsor/Image02.png' width="350px" align="middle"></a>
+								 <a target="_blank" href="http://www.airbusdefenceandspacenetherlands.nl"><img src='images/sponsor/Image_airbus.png' width="350px" align="middle"></a>
 								 </div>
 								 <div class= 'col-sm-2'> </div>
 								 <div class='col-sm-6' style='padding: 100px:'>
