fix: #9 footer mail link points to sciencemail

--- a/footer.html
+++ b/footer.html
@@ -32,7 +32,7 @@
 						</a>
 					</td>
 					<td style='padding: 5px'>
-						<a id="mail" href="mailto:igemleiden2016@gmail.com" target="blank">
+						<a id="mail" href="mailto:igem@science.leidenuniv.nl" target="blank">
 							<div class="cf">
 								
 								
