Fix #10: moved scripts, stylesheets and fonts to local versions

--- a/description.html
+++ b/description.html
@@ -5,27 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/jquery-1-12-4?action=raw&ctype=text/js"></script>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/js/bootstrap-min?action=raw&ctype=text/js"></script>
+    <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libraries/font-awesome-4.6.3/css/font-awesome.min.css" type='text/css'/>
+    <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Montserrat?action=raw&ctype=text/css"/>
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
+    <link rel="stylesheet" href="style/fonts/Lato.css"/>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/scripts/smoothscrolling?action=raw&ctype=text/css"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+    <link rel="stylesheet" href="style/main.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
     <link rel="stylesheet" href="Style/fonts/Lato.css"/>
 
     <link rel="stylesheet" href="style/main.css"/>
     <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
-
-    <script type="text/javascript" src="libraries/three.min.js"/></script>
-
-    <script type="text/javascript" src="scripts/rpm-demo.js"/></script>
 
 	<style type='text/css'>
       #top_title, #sideMenu{
@@ -38,15 +33,15 @@
         padding: 0;
       }
     </style>
-  
+
 	<script src="http://www.w3schools.com/lib/w3data.js"></script>
 
-	
+
  </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
       <div id='nav-background' style='position: fixed; top: 15px;'></div>
-      
+
       <div w3-include-html="navbar.html"></div>
 
       <div id='header-background' style="background-image: url('http://2016.igem.org/wiki/images/2/23/Team-Leiden-images-project-image07.png');">
@@ -104,7 +99,7 @@
                   <td style='padding: 10px;'> <img height='150' width='200'src='images/project/image03.jpg'> </td>
                 </tr>
               </table>
-              Figure 1. Sources of perchlorate contamination 
+              Figure 1. Sources of perchlorate contamination
 			  </p>
 
               <p>In 1998 perchlorate was first detected in drinking water in the Southern US, after which the EPA (environmental protection agency) added the compound to its Contaminate candidate list (CCL). Most of the contamination could be associated with military activities. More recent studies found contamination of ground- and surface waters in at least 26 states, which serve as drinking water sources for more than 16 million people. <sup> 5 </sup>  According to the EPA the estimated annual costs for public water systems to comply with a 4microgram/L of perchlorate limit are 120million dollar (in 2013). This is still less than the annual 320 million dollar costs of the Arsenic rule of 10 microgram/L. <sup> 6 </sup>
@@ -119,7 +114,7 @@
 
               <p> <i> Mars will come to fear my botany powers. </i> - Mark Watney, The Martian (2015) </p>
 
-              <p> <i> References: </i> </p> 
+              <p> <i> References: </i> </p>
 
               <p>
                 <ol>
@@ -144,5 +139,3 @@
 		</script>
   </body>
 </html>
- 
- 
