--- a/rpm_tekst.html
+++ b/rpm_tekst.html
@@ -6,27 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/jquery-1-12-4?action=raw&ctype=text/js"></script>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/js/bootstrap-min?action=raw&ctype=text/js"></script>
+    <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libraries/font-awesome-4.6.3/css/font-awesome.min.css" type='text/css'/>
+    <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Montserrat?action=raw&ctype=text/css"/>
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
+    <link rel="stylesheet" href="style/fonts/Lato.css"/>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/scripts/smoothscrolling?action=raw&ctype=text/css"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+    <link rel="stylesheet" href="style/main.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
     <link rel="stylesheet" href="Style/fonts/Lato.css"/>
 
     <link rel="stylesheet" href="style/main.css"/>
     <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
-
-    <script type="text/javascript" src="libraries/three.min.js"/></script>
-
-    <script type="text/javascript" src="scripts/rpm-demo.js"/></script>
 
 	<style type='text/css'>
       #top_title, #sideMenu{
@@ -40,15 +35,15 @@
       }
     </style>
 		<script src="http://www.w3schools.com/lib/w3data.js"></script>
-	
+
  </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
       <div id='nav-background' style='position: fixed; top: 15px;'></div>
-      
+
       <div w3-include-html="navbar.html"></div>
 
-   
+
 	<div id='header-background'>
 
       </div>
@@ -56,15 +51,15 @@
         <p style='font-size: 100px; color: white; text-align: center; font-family: Montserrat, sans-serif; font-weight: normal;'> RPM </p>
       </div>
 
-    <!-- <img src='images/logo_iGEM_Leiden_Jumbo.png' width='300'/> 
+    <!-- <img src='images/logo_iGEM_Leiden_Jumbo.png' width='300'/>
       <p style='font-size: 3em'> <i>E. colinizer</i></p>
-      <p style='font-size: 1em; position: relative; top: -25px; margin-bottom: -15px;'> Conquering Mars, one gene at a time </p> 
+      <p style='font-size: 1em; position: relative; top: -25px; margin-bottom: -15px;'> Conquering Mars, one gene at a time </p>
       <a class='smooth' href='#abstract'><i class="fa fa-angle-down fa-5x" aria-hidden="true"></i></a>-->
-   
-	
-	<!-- HIER NOG EEN PLAATJE VAN DE RPM: images/project/rpm 
+
+
+	<!-- HIER NOG EEN PLAATJE VAN DE RPM: images/project/rpm
 	EN BEWEGEND BEELD VAN DE RPM -->
-	
+
 			<div id="introduction" style='margin-top: -55px;' class="container-fluid bg-grey">
         <div class="row">
             <div class='col-sm-2'></div>
@@ -75,7 +70,7 @@
           </div>
         </div>
       </div>
-	
+
   <div id="abstract" style='margin-top: -120px;' class="container-fluid bg-white">
       <div class="row">
         <!--  <div class='col-sm-12' id='rpm-demo' style='height: 400px;'> -->
@@ -90,7 +85,7 @@
        </div>
       <!-- </div>
     </div> -->
-	
+
     <div w3-include-html="footer.html"></div>
 		<script>
 			w3IncludeHTML();
