--- a/Biobricks.html
+++ b/Biobricks.html
@@ -6,27 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/jquery-1-12-4?action=raw&ctype=text/js"></script>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/js/bootstrap-min?action=raw&ctype=text/js"></script>
+    <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libraries/font-awesome-4.6.3/css/font-awesome.min.css" type='text/css'/>
+    <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Montserrat?action=raw&ctype=text/css"/>
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
+    <link rel="stylesheet" href="style/fonts/Lato.css"/>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/scripts/smoothscrolling?action=raw&ctype=text/css"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+    <link rel="stylesheet" href="style/main.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
     <link rel="stylesheet" href="Style/fonts/Lato.css"/>
 
     <link rel="stylesheet" href="style/main.css"/>
     <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
-
-    <script type="text/javascript" src="libraries/three.min.js"/></script>
-
-    <script type="text/javascript" src="scripts/rpm-demo.js"/></script>
 
     <style type='text/css'>
       #top_title, #sideMenu{
@@ -61,14 +56,14 @@ table#t01 th {
     background-color: black;
     color: white;
 }
-	
+
 </style>
 	<script src="http://www.w3schools.com/lib/w3data.js"></script>
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
       <div id='nav-background' style='position: fixed; top: 15px;'></div>
-      
+
       <div w3-include-html="navbar.html"></div>
 
       <div id='header-background'>
@@ -93,9 +88,9 @@ table#t01 th {
         <div class="row">
             <div class='col-sm-2'></div>
             <div class='col-sm-8' style='text-align: justify;'>
-              
+
             <h2 style='margin-bottom: 20px;'> Biobricks </h2>
-	
+
 		<table class="biobricks" id="t01">
 		<tr>
 			<th> <b> Name </b> </th>
@@ -173,10 +168,10 @@ table#t01 th {
 			<td> Medium promoter with weak RBS and GFP. Medium promoter from the constitutive promoter family combined with a weak RBS (PR6) and tagged with GFP to quantify the gene expression. </td>
 			<td> 783 bp </td>
 			<td> Promotor</td>
-		</tr>	
+		</tr>
 	</table>
-	
-	
+
+
 	<h2 style='margin-bottom: 20px;'> Backbones </h2>
 		<table class="biobricks" id="t01">
 			<tr>
@@ -218,9 +213,9 @@ table#t01 th {
 	</div>
 	</div>
 	</div>
-	
+
 	<div w3-include-html="footer.html"></div>
-	
+
 	<script>
 		w3IncludeHTML();
 	</script>
