--- a/team.html
+++ b/team.html
@@ -1,31 +1,26 @@
 <html>
-	 <head>
+	<head>
     <title> iGEM Leiden Wiki : Project </title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/jquery-1-12-4?action=raw&ctype=text/js"></script>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/js/bootstrap-min?action=raw&ctype=text/js"></script>
+    <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libraries/font-awesome-4.6.3/css/font-awesome.min.css" type='text/css'/>
+    <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Montserrat?action=raw&ctype=text/css"/>
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
+    <link rel="stylesheet" href="style/fonts/Lato.css"/>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/scripts/smoothscrolling?action=raw&ctype=text/css"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+    <link rel="stylesheet" href="style/main.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
     <link rel="stylesheet" href="Style/fonts/Lato.css"/>
 
     <link rel="stylesheet" href="style/main.css"/>
     <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
-
-    <script type="text/javascript" src="libraries/three.min.js"/></script>
-
-    <script type="text/javascript" src="scripts/rpm-demo.js"/></script>
 
 	<style type='text/css'>
       #top_title, #sideMenu{
@@ -95,9 +90,9 @@
 					role : 'Secretary Manager',
 					fos : 'MSc student biology and statistics'}
 			];
-		
+
 			function layoutBody(){
-				window.tableLayout( $("#team-member-table"), function( teamMemberNumber ){						
+				window.tableLayout( $("#team-member-table"), function( teamMemberNumber ){
 						element = $("#team-member-cell").clone();
 						member = window.members[ teamMemberNumber ];
 						element.find(".member-name").html( member.name );
@@ -105,7 +100,7 @@
 						return element;
 					}, window.members.length, 290 );
 			};
-			
+
 			$( window ).ready(function(){
 				layoutBody();
 				w3IncludeHTML();
@@ -118,35 +113,35 @@
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
       <div id='nav-background' style='position: fixed; top: 15px;'></div>
-				
+
       <div w3-include-html="navbar.html"></div>
-	  
+
 			<div id='header-background' style="background-image: url('images/Team/image00.jpg');"></div>
 			<div class="jumbotron text-center">
 				<p style='font-size: 100px; color: white; text-align: center; font-family: Montserrat, sans-serif; font-weight: normal; text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;'> Team </p>
 			</div>
-     
+
      <!-- A cache used to load html templates -->
 			<div id='template-cache' style='display:none'>
 				<div id='team-member-cell' class='col-md-4' style='padding: 20px;'>
 					<img src="images/Team/image03.jpg" width="250px"/>
 					<p style='width:250px;'>
 						<h2 class='member-name' style='width:250px; height:1.5em;'> Charlotte v.d. Velde</h2>
-						<p style='width:250px;'> 
+						<p style='width:250px;'>
 							<b> Role: </b> Safety manager <br/>
 							<b> Field of study: </b> MSc student Biology
 						</p>
 					</p>
 				</div>
 			</div>
-  
+
 			<div id="team-members" style='margin-top: -120px;' class="container-fluid bg-white">
 				<div class="row">
 					<div class='col-sm-2'></div>
 					<div class='col-sm-8' style='text-align: justify;'>
 						<h2> Students </h2>
 
-						<table style='width: 100%;' id='team-member-table'></table>			
+						<table style='width: 100%;' id='team-member-table'></table>
 
 						<h2> Advisors </h2>
 						<div class="row">
@@ -156,12 +151,12 @@
 								<b> Position: </b> Principal Investigator
 							</div>
 							<div class='col-sm-4' style='padding: 50px;'>
-							 <img src="images/Team/image15.jpg" width="200px"/> 
+							 <img src="images/Team/image15.jpg" width="200px"/>
 							 <h2> Anne v.d. Meij </h2>
 							 <b> Position: </b> Phd candidate
 							</div>
 							<div class='col-sm-4' style='padding: 50px;'>
-							 <img src="images/Team/image14.jpg" width="200px"/> 
+							 <img src="images/Team/image14.jpg" width="200px"/>
 							 <h2> Lizah v.d. Aart </h2>
 							 <b> Position: </b> Phd candidate
 							</div>
