fix: #1 consistent text-shadow jumbotron headers

--- a/team.html
+++ b/team.html
@@ -123,7 +123,7 @@
 	  
 			<div id='header-background' style="background-image: url('images/Team/image00.jpg');"></div>
 			<div class="jumbotron text-center">
-				<p style='font-size: 100px; color: white; text-align: center; font-family: Montserrat, sans-serif; font-weight: normal; text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;'> Team </p>
+				<p> Team </p>
 			</div>
      
      <!-- A cache used to load html templates -->
