fix: include script now offline reference

--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
         padding: 0;
       }
     </style>
-	<script src="http://www.w3schools.com/lib/w3data.js"></script>
+		<script src="scripts/include-html.js"></script>
 	<script type="text/javascript" src="scripts/table-layout.js"></script>
 	<script type="text/javascript">
 			window.members = [
