--- a/Biobricks.html
+++ b/Biobricks.html
@@ -58,7 +58,7 @@ table#t01 th {
 }
 
 </style>
-	<script src="http://www.w3schools.com/lib/w3data.js"></script>
+	<script src="scripts/include-html.js"></script>
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
