--- a/Bioreactor.html
+++ b/Bioreactor.html
@@ -34,7 +34,7 @@
       }
     </style>
 
-  <script src="http://www.w3schools.com/lib/w3data.js"></script>
+    <script src="scripts/include-html.js"></script>
 
  </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
