--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="style/main.css"/>
     <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
-	<script src="http://www.w3schools.com/lib/w3data.js"></script>
+    <script src="scripts/include-html.js"></script>
 
 	<style type='text/css'>
       #top_title, #sideMenu{
