fix: #16 links to notebook removed, moved biobricks and sponsors, fixed home page link

--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <a class="navbar-brand" href="#">LEIDEN</a>
+          <a class="navbar-brand" href="index.html">LEIDEN</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -19,12 +19,13 @@
 					<a href="description.html">DESCRIPTION</a>
 					<a href="Science.html"> DESIGN </a>
 					<a href="Bioreactor.html"> BIOREACTOR </a>
+          <a href="Biobricks.html"> BIOBRICKS </a>
 					<a href="rpm_tekst.html"> RPM </a>
-					<!-- 
+					<!--
 					<a href="#"> ACHIEVEMENTS </a> -->
 				</div>
 			</li>
-			
+
 			<!--
 			<li class="dorpdown">
 			<a href="#lab">LAB</a>
@@ -34,20 +35,20 @@
 				</div>
 			</li>
 			-->
-			
+
 			<!--
 			<li class= "dropdown">
 			<a href="#modelling">MODELLING</a>
 			</li>
 			-->
-			
+
 			<li class= "dropdown">
 			<a href="events.html">OUTREACH</a>
 				<div class="dropdown-content">
 				<!--	<a href="#"> HUMAN PRACTICES </a>
 					<a href="#"> RIVM </a> -->
 					<a href="events.html"> EVENTS </a>
-				<!--	
+				<!--
 					<a href="#"> QUESTIONNAIRE </a>-->
 				</div>
 			</li>
@@ -58,12 +59,17 @@
 					<a href="sponsors.html"> SPONSORS </a>
 				<!--	<a href="#"> COLLABORATIONS </a>
 					<a href="#"> PICTURES </a> -->
-				</div>           
+				</div>
             </li>
             <li class="dropdown">
+      <!--
 			<a href="labjournal.html">NOTEBOOK</a>
+    -->
+      <li class="dropdown">
+        <a href="sponsors.html"> SPONSORS </a>
+      </li>
+
 				<div class="dropdown-content">
-					<a href="Biobricks.html"> BIOBRICKS </a>
 				<!--	<a href="#"> LABJOURNAL </a>
 					<a href="#"> PROTOCOLS </a>
 					<a href="#"> RPM </a>
